Updates due to changes in Common.